# android-cuttlefish

base/cvd/: BUILD.e2fsprogs.bazel  BUILD.fmtlib.bazel  BUILD.pdl.bazel  MODULE.bazel
base/cvd/android/: BUILD.bazel
base/cvd/build_external/e2fsprogs/: BUILD.bazel
base/cvd/cuttlefish/package/: BUILD.bazel
base/cvd/libbase/: BUILD.bazel
base/debian/: rules
