package(
    default_visibility = [
        "@//:android_cuttlefish",
    ],
)

cc_binary(
    name = "e2fsdroid",
    srcs = [
        "contrib/android/basefs_allocator.c",
        "contrib/android/base_fs.c",
        "contrib/android/block_list.c",
        "contrib/android/block_range.c",
        "contrib/android/e2fsdroid.c",
        "contrib/android/fsmap.c",
        "contrib/android/perms.c",
    ],
    includes = [
        "contrib/android",
        "lib",
    ],
    deps = [
        "@//android:log_header",
        "@//build_external/e2fsprogs:e2fsprogs_config",
        "@//libbase",
        "@//libsparse",
        "@boringssl//:crypto",
        "@zlib",
        ":libext2fs",
        ":libext2_com_err",
        ":libext2_misc",
        # WIP libcutils
        # WIP libselinux
    ],
)

cc_library(
    name = "libext2fs",
    srcs = [
        "lib/ext2fs/alloc.c",
        "lib/ext2fs/alloc_sb.c",
        "lib/ext2fs/alloc_stats.c",
        "lib/ext2fs/alloc_tables.c",
        "lib/ext2fs/atexit.c",
        "lib/ext2fs/badblocks.c",
        "lib/ext2fs/bb_inode.c",
        "lib/ext2fs/bitmaps.c",
        "lib/ext2fs/bitops.c",
        "lib/ext2fs/blkmap64_ba.c",
        "lib/ext2fs/blkmap64_rb.c",
        "lib/ext2fs/blknum.c",
        "lib/ext2fs/block.c",
        "lib/ext2fs/bmap.c",
        "lib/ext2fs/check_desc.c",
        "lib/ext2fs/closefs.c",
        "lib/ext2fs/crc16.c",
        "lib/ext2fs/crc32c.c",
        "lib/ext2fs/csum.c",
        "lib/ext2fs/dblist.c",
        "lib/ext2fs/dblist_dir.c",
        "lib/ext2fs/digest_encode.c",
        "lib/ext2fs/dirblock.c",
        "lib/ext2fs/dirhash.c",
        "lib/ext2fs/dir_iterate.c",
        "lib/ext2fs/dupfs.c",
        "lib/ext2fs/expanddir.c",
        "lib/ext2fs/ext_attr.c",
        "lib/ext2fs/extent.c",
        "lib/ext2fs/fallocate.c",
        "lib/ext2fs/fileio.c",
        "lib/ext2fs/finddev.c",
        "lib/ext2fs/flushb.c",
        "lib/ext2fs/freefs.c",
        "lib/ext2fs/gen_bitmap64.c",
        "lib/ext2fs/gen_bitmap.c",
        "lib/ext2fs/get_num_dirs.c",
        "lib/ext2fs/get_pathname.c",
        "lib/ext2fs/getsectsize.c",
        "lib/ext2fs/getsize.c",
        "lib/ext2fs/hashmap.c",
        "lib/ext2fs/i_block.c",
        "lib/ext2fs/icount.c",
        "lib/ext2fs/imager.c",
        "lib/ext2fs/ind_block.c",
        "lib/ext2fs/initialize.c",
        "lib/ext2fs/inline.c",
        "lib/ext2fs/inline_data.c",
        "lib/ext2fs/inode.c",
        "lib/ext2fs/io_manager.c",
        "lib/ext2fs/ismounted.c",
        "lib/ext2fs/link.c",
        "lib/ext2fs/llseek.c",
        "lib/ext2fs/lookup.c",
        "lib/ext2fs/mkdir.c",
        "lib/ext2fs/mkjournal.c",
        "lib/ext2fs/mmp.c",
        "lib/ext2fs/namei.c",
        "lib/ext2fs/native.c",
        "lib/ext2fs/newdir.c",
        "lib/ext2fs/nls_utf8.c",
        "lib/ext2fs/openfs.c",
        "lib/ext2fs/progress.c",
        "lib/ext2fs/punch.c",
        "lib/ext2fs/qcow2.c",
        "lib/ext2fs/rbtree.c",
        "lib/ext2fs/read_bb.c",
        "lib/ext2fs/read_bb_file.c",
        "lib/ext2fs/res_gdt.c",
        "lib/ext2fs/rw_bitmaps.c",
        "lib/ext2fs/sha256.c",
        "lib/ext2fs/sha512.c",
        "lib/ext2fs/swapfs.c",
        "lib/ext2fs/symlink.c",
        "lib/ext2fs/test_io.c",
        "lib/ext2fs/undo_io.c",
        "lib/ext2fs/unix_io.c",
        "lib/ext2fs/unlink.c",
        "lib/ext2fs/valid_blk.c",
        "lib/ext2fs/version.c",
#        "lib/ext2fs/bb_compat.c",
#        "lib/ext2fs/bmove.c",
#        "lib/ext2fs/brel_ma.c",
#        "lib/ext2fs/inode_io.c",
#        "lib/ext2fs/irel_ma.c",
#        "lib/ext2fs/sparse_io.c",
#        "lib/ext2fs/tdb.c",
#        "lib/ext2fs/tdbtool.c",
#        "lib/ext2fs/write_bb_file.c",
    ],
    includes = [
        "lib",
        "lib/ext2fs",
    ],
    deps = [
        "@//build_external/e2fsprogs:e2fsprogs_config",
        "@//build_external/e2fsprogs:libext2fs_generated_private",
        ":libext2_com_err",
        "@//libsparse",
        "@zlib",
    ],
)

cc_library(
    name = "libext2_blkid",
    srcs = [
        "lib/blkid/cache.c",
        "lib/blkid/dev.c",
        "lib/blkid/devname.c",
        "lib/blkid/devno.c",
        "lib/blkid/getsize.c",
        "lib/blkid/llseek.c",
        "lib/blkid/probe.c",
        "lib/blkid/read.c",
        "lib/blkid/resolve.c",
        "lib/blkid/save.c",
        "lib/blkid/tag.c",
        "lib/blkid/version.c",
    ],
    includes = [
        "lib",
    ],
    deps = [
        "@//build_external/e2fsprogs:e2fsprogs_config",
        "@//build_external/e2fsprogs:libext2_blkid_generated",
        ":libext2_uuid",
    ],
)

cc_library(
    name = "libext2_com_err",
    srcs = [
        "lib/et/error_message.c",
        "lib/et/et_name.c",
        "lib/et/init_et.c",
        "lib/et/com_err.c",
        "lib/et/com_right.c",
    ],
    includes = [
        "lib",
    ],
    deps = [
        "@//build_external/e2fsprogs:e2fsprogs_config",
    ],
)

cc_library(
    name = "libext2_e2p",
    srcs = [
        "lib/e2p/encoding.c",
        "lib/e2p/errcode.c",
        "lib/e2p/feature.c",
        "lib/e2p/fgetflags.c",
        "lib/e2p/fsetflags.c",
        "lib/e2p/fgetproject.c",
        "lib/e2p/fsetproject.c",
        "lib/e2p/fgetversion.c",
        "lib/e2p/fsetversion.c",
        "lib/e2p/getflags.c",
        "lib/e2p/getversion.c",
        "lib/e2p/hashstr.c",
        "lib/e2p/iod.c",
        "lib/e2p/ljs.c",
        "lib/e2p/ls.c",
        "lib/e2p/mntopts.c",
        "lib/e2p/ostype.c",
        "lib/e2p/parse_num.c",
        "lib/e2p/pe.c",
        "lib/e2p/percent.c",
        "lib/e2p/pf.c",
        "lib/e2p/ps.c",
        "lib/e2p/setflags.c",
        "lib/e2p/setversion.c",
        "lib/e2p/uuid.c",
    ],
    includes = [
        "lib",
    ],
    deps = [
        "@//build_external/e2fsprogs:e2fsprogs_config",
        "@//build_external/e2fsprogs:libext2fs_generated",
    ],
)

cc_library(
    name = "libext2_misc",
    srcs = [
        "misc/create_inode.c",
    ],
    includes = [
        "lib",
    ],
    deps = [
        "@//build_external/e2fsprogs:e2fsprogs_config",
        ":libext2fs",
        ":libext2_com_err",
        ":libext2_quota",
    ],
)

cc_library(
    name = "libext2_quota",
    srcs = [
        "lib/support/devname.c",
        "lib/support/dict.c",
        "lib/support/mkquota.c",
        "lib/support/parse_qtype.c",
        "lib/support/plausible.c",
        "lib/support/profile.c",
        "lib/support/profile_helpers.c",
        "lib/support/quotaio.c",
        "lib/support/quotaio_tree.c",
        "lib/support/quotaio_v2.c",
    ],
    includes = [
        "lib",
    ],
    deps = [
        "@//build_external/e2fsprogs:e2fsprogs_config",
        "@//build_external/e2fsprogs:libext2_quota_generated",
        ":libext2fs",
        ":libext2_blkid",
        ":libext2_com_err",
    ],
)

cc_library(
    name = "libext2_uuid",
    srcs = [
        "lib/uuid/clear.c",
        "lib/uuid/compare.c",
        "lib/uuid/copy.c",
        "lib/uuid/gen_uuid.c",
        "lib/uuid/isnull.c",
        "lib/uuid/pack.c",
        "lib/uuid/parse.c",
        "lib/uuid/unpack.c",
        "lib/uuid/unparse.c",
        "lib/uuid/uuid_time.c",
    ],
    includes = [
        "lib",
    ],
    deps = [
        "@//build_external/e2fsprogs:e2fsprogs_config",
        "@//build_external/e2fsprogs:libext2_uuid_generated",
    ],
)

cc_binary(
    name = "mke2fs",
    srcs = [
        "misc/mke2fs.c",
        "misc/util.c",
        "misc/mk_hugefiles.c",
    ],
    includes = [
        "e2fsck",
        "lib",
    ],
    deps = [
        "@//build_external/e2fsprogs:e2fsprogs_config",
        "@//build_external/e2fsprogs:mke2fs_generated",
        "@//libbase",
        "@//libsparse",
        "@zlib",
        ":libext2fs",
        ":libext2_blkid",
        ":libext2_com_err",
        ":libext2_e2p",
        ":libext2_misc",
        ":libext2_quota",
        ":libext2_uuid",
    ],
)

